simplified / rearranged